# myteams

./: .clang-tidy  .gitignore  CMakeLists.txt  Makefile  myteams_data.json
.github/: copilot-instructions.md  norm-rfc.md  rfc_protocol.md  subject.md
.github/workflows/: built-and-lint.yaml
client/: ClientApplication.cpp  ClientApplication.hpp  User.cpp  User.hpp  main.cpp
client/network/: Poller.cpp  TcpClient.cpp  TcpClient.hpp
client/protocol/: CommandLineDispatcher.cpp  CommandLineDispatcher.hpp  CommandSchemas.hpp  ICommandHandler.hpp  ServerMessageRouter.cpp  ServerMessageRouter.hpp  TokenParser.cpp  TokenParser.hpp
client/protocol/handlers/: ChannelCreatedHandler.cpp  ChannelCreatedHandler.hpp  LoggingClientC.hpp  PrivateMessageHandler.cpp  PrivateMessageHandler.hpp  ReplyCreatedHandler.cpp  ReplyCreatedHandler.hpp  Response200Handler.cpp  Response200Handler.hpp  Response201Handler.cpp  Response201Handler.hpp  ResponseErrorHandler.cpp  ResponseErrorHandler.hpp  ResponseStatusHandler.cpp  ResponseStatusHandler.hpp  TeamCreatedHandler.cpp  TeamCreatedHandler.hpp  ThreadCreatedHandler.cpp  ThreadCreatedHandler.hpp  UserLoggedInHandler.cpp  UserLoggedInHandler.hpp  UserLoggedOutHandler.cpp  UserLoggedOutHandler.hpp
client/sys/: ClientError.cpp  ClientError.hpp  Posix.cpp  Posix.hpp
libs/: logging_server.h
libs/myteams/: logging_server.h
server/: Context.hpp  main.cpp  server.cpp  server.hpp
server/client/: client.cpp  client.hpp
server/commands/: ICommand.cpp  ICommand.hpp
server/commands/commandHandling/: commandHandling.cpp  commandHandling.hpp
server/commands/create/: create.cpp  create.hpp
server/commands/info/: info.cpp  info.hpp
server/commands/list/: list.cpp  list.hpp
server/commands/login/: login.cpp  login.hpp
server/commands/logout/: logout.cpp  logout.hpp
server/commands/messages/: messages.cpp  messages.hpp
server/commands/send/: send.cpp  send.hpp
server/commands/subscribe/: subscribe.cpp  subscribe.hpp
server/commands/subscribed/: subscribed.cpp  subscribed.hpp
server/commands/unsubscribe/: unsubscribe.cpp  unsubscribe.hpp
server/commands/use/: use.cpp  use.hpp
server/commands/user/: user.cpp  user.hpp
server/commands/users/: users.cpp  users.hpp
server/database/: Database.cpp  Database.hpp
server/models/: Channel.cpp  Channel.hpp  Message.cpp  Message.hpp  Reply.cpp  Reply.hpp  Team.cpp  Team.hpp  Thread.cpp  Thread.hpp  User.cpp  User.hpp
server/net/: Poller.cpp  Poller.hpp
server/saveManager/: JsonParser.cpp  JsonParser.hpp  JsonSerializer.cpp  JsonSerializer.hpp  saveManager.cpp  saveManager.hpp
server/sys/: Errors.cpp  Errors.hpp  Posix.cpp  Posix.hpp
server/utils/: utils.cpp  utils.hpp
tests/: tester.py
tests/input_file/: test01_login_logout.txt  test03_create_team_and_list.txt  test05_users_info_happy_path.txt  test06_invalid_unquoted_login.txt  test07_invalid_login_too_long.txt  test08_subscribed_happy_no_team.txt  test09_use_reset_context.txt  test10_create_two_teams_and_list.txt  test11_combined_multi_command_flow.txt  test12_user_command_seed.txt  test13_send_messages_seed.txt  test14_subscribe_unsubscribe_seed.txt  test15_use_list_info_seed.txt  test16_combined_all_commands_seed.txt
tests/output_file/: test01_login_logout.json  test02_users_unauthorized.json  test03_create_team_and_list.json  test04_help_command.json  test05_users_info_happy_path.json  test06_invalid_unquoted_login.json  test07_invalid_login_too_long.json  test08_subscribed_happy_no_team.json  test09_use_reset_context.json  test10_create_two_teams_and_list.json  test11_combined_multi_command_flow.json  test12_user_command_seed.json  test13_send_messages_seed.json  test14_subscribe_unsubscribe_seed.json  test15_use_list_info_seed.json  test16_combined_all_commands_seed.json
tests/seed_file/: checker_like_seed.json  test14_subscribe_unsubscribe_seed.json
